Fixed the spacing when sorting between portfolio categories

--- a/CSS/animations.css
+++ b/CSS/animations.css
@@ -9,12 +9,12 @@
         margin-top: 15px;
         transition: all 0.35s;
     }
-    .card-featured-small[data-emergence=hidden] {
+    .external[data-emergence=hidden] {
         opacity: 0;
         transform: scale(0.9);
         transition: all 0.35s;
     }
-    .card-featured-small[data-emergence=visible] {
+    .external[data-emergence=visible] {
         opacity: 1;
         transform: scale(1.0);
         transition: all 0.35s;
