--- a/CSS/style.css
+++ b/CSS/style.css
@@ -266,7 +266,7 @@ a:visited {
 
 .project-sort-button {
     width: 15%;
-    padding: 12px 0;
+    padding: 12px;
 }
 
 .project-sort-button-current {
